--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
 base="/"
 publish="site/"
-command="mkdocs build"
+command="source venv/bin/activate; pip install pymdown-extensions; pip install mkdocs; pip install mkdocs-material; pip install pygments; mkdocs build"
