--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: Skua
 theme:
   name: 'material'
 nav:
-  Home: index.md
+  - Home: index.md
 markdown_extensions:
 - codehilite
 - pymdownx.arithmatex
