--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,11 @@
 site_name: Skua
 theme:
   name: 'material'
+
 nav:
-  - Home: index.md
+- Home: index.md
+- Preprocessors:
+    - Introduction: 'preprocessors/introduction.md'
 markdown_extensions:
 - codehilite
 - pymdownx.arithmatex
