--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
 - Home: index.md
 - Preprocessors:
     - Introduction: 'preprocessors/introduction.md'
+- Aknowledgements: aknowledgments.md
 markdown_extensions:
 - codehilite
 - pymdownx.arithmatex
