--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           pip install -r requirements.txt
     - run:
         name: run tests
-        command: source venv/bin/activate; python -m unittest discover -s tests -t
+        command: source venv/bin/activate; python -m unittest discover -s ./tests -t ./tests
     - run:
         name: remove old python .whl files
         command: rm -rf dist/*
