Added a routine to generate a list of target files for a list of input files. Updated documentation: * Added more links to the navigation bar Added a method to the `Pipeline` class to allow a list of files to be opened and compiled. [ci skip]

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,14 @@ theme:
 
 nav:
 - Home: index.md
+- Files:
+    - Introduction: 'files/introduction.md'
+- Pipelines:
+    - Introduction: 'pipelines/introduction.md'
 - Preprocessors:
     - Introduction: 'preprocessors/introduction.md'
+- Render:
+    - Introduction: 'render/introduction.md'
 - Changelog: changelog.md
 - Aknowledgements: aknowledgments.md
 markdown_extensions:
