Added documentation for `skua.urls`. [ci skip]

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,8 @@ nav:
     - Introduction: 'preprocessors/introduction.md'
 - Render:
     - Introduction: 'render/introduction.md'
+- Urls:
+    - Introduction: 'urls/introduction.md'
 - Changelog: changelog.md
 - Aknowledgements: aknowledgments.md
 markdown_extensions:
