--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     steps:
     - checkout
     - run:
-        name: remove development virtualenv and add new one
+        name: create virtualenv
         command: |
           rm -rf venv
           python3.7 -m venv venv
@@ -14,12 +14,3 @@ jobs:
     - run:
         name: run tests
         command: source venv/bin/activate; pip install -r test-requirements.txt; python -m unittest tests
-    - run:
-        name: remove old python .whl files
-        command: rm -rf dist/*
-    - run:
-        name: build the module
-        command: python setup.py sdist; python setup.py bdist_wheel
-    - run:
-        name: upload the build module to pypi
-        command: pip install twine --user; twine upload dist/* -u $pypi_username -p $pypi_password
