--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,4 +13,4 @@ jobs:
           pip install -r requirements.txt
     - run:
         name: run tests
-        command: source venv/bin/activate; pip install -r test-requirements.txt; python -m unittest tests
+        command: source venv/bin/activate; python -m unittest tests
